--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,16 +13,22 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go-version: [ '1.23', '1.24' ]
     steps:
     - uses: actions/checkout@v4
 
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.23'
+        go-version: ${{ matrix.go-version }}
 
     - name: Build
       run: go build -v ./...
 
     - name: Test
       run: go test -v ./...
+
+    - name: Golangci-lint
+      uses: golangci/golangci-lint-action@v8.0.0
