--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,5 +33,9 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-go@v5
+      with:
+        go-version: stable
     - name: Golangci-lint
       uses: golangci/golangci-lint-action@v8.0.0
